dataset1235/2025-2/610742602/users/14016319/executions/677928262_2383239197.log
== SUBMISSION (2025-08-26 21:48:14)
-- CODE: 
from math import *
A = float(input("Insira um valor:"))
B = float(input("Insira um valor:"))
C = float(input("Insira a quantidade do angulo"))

J= radians(G)
C=sqrt((A**2) + (B**2) - 2*A*B*cos(J))
print(round(C,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:48:12)
-- CODE: 
from math import *
A = float(input("Insira um valor:"))
B = float(input("Insira um valor:"))
C = float(input("Insira a quantidade do angulo"))

J= radians(G)
C=sqrt((A**2) + (B**2) - 2*A*B*cos(J))
print(round(C,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:47:54)
-- CODE: 
from math import *
A = float(input("Insira um valor:"))
B = float(input("Insira um valor:"))
C = float(input("Insira um valor:"))

J= radians(G)
C=sqrt((A**2) + (B**2) - 2*A*B*cos(J))
print(round(C,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:48:13)
-- CODE: 
from math import *
A = float(input("Insira um valor:"))
B = float(input("Insira um valor:"))
C = float(input("Insira a quantidade do angulo"))

J= radians(G)
C=sqrt((A**2) + (B**2) - 2*A*B*cos(J))
print(round(C,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    J= radians(G)
               ^
NameError: name 'G' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:48:30)
-- CODE: 
from math import *
A = float(input("Insira um valor:"))
B = float(input("Insira um valor:"))
G = float(input("Insira a quantidade do angulo:"))

J= radians(G)
C=sqrt((A**2) + (B**2) - 2*A*B*cos(J))
print(round(C,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:48:30)
-- CODE: 
from math import *
A = float(input("Insira um valor:"))
B = float(input("Insira um valor:"))
G = float(input("Insira a quantidade do angulo:"))

J= radians(G)
C=sqrt((A**2) + (B**2) - 2*A*B*cos(J))
print(round(C,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Insira um valor:Insira um valor:Insira a quantidade do angulo:9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
